--- a/angular.json
+++ b/angular.json
@@ -1,6 +1,6 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
-  "version": 1, 
+  "version": 1,
   "newProjectRoot": "projects",
   "projects": {
     "projeto-pokedex": {
@@ -123,6 +123,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "projeto-pokedex"
+    }
+  },
+  "defaultProject": "projeto-pokedex",
+  "cli": {
+    "analytics": "ea911f83-82d8-4208-828b-7d84087be4ed"
+  }
 }
